# webdevcamp

./: .gitignore  README.md  fix.sh
.github/workflows/: backend-testing.yml
backend/: .coverage  Procfile  fly.toml  pyproject.toml  requirements.txt
backend/backend/: main.py  models.py
backend/database/: er-model.png:Zone.Identifier  populate_database.py  schema.sql  webdevcamp.png:Zone.Identifier
backend/tests/: conftest.py  test_main.py  testdata.py  testhelpers.py
backend/tests/assets/: sample.css  sample.html
frontend/: .postcssrs.json  index.html  package.json  pnpm-lock.yaml
frontend/public/ethan-o-2024/: index.js  styles.css
frontend/src/: App.tsx  ErrorPage.tsx  index.css  index.tsx
frontend/src/components/App/: App.tsx
frontend/src/components/Button/: Button.module.css  Button.tsx
frontend/src/components/Root/: Root.module.css  Root.tsx
frontend/src/routes/: ErrorPage.tsx  Home.tsx  Login.tsx  Register.tsx
frontend/webdevcamp/: index.html  package.json
frontend/webdevcamp/src/: App.tsx
