[tool.poetry]
name = "webdevcamp-backend"
version = "0.1.0"
description = "Backend API for webdevcamp"
authors = ["Lachlan Shoesmith <12870244+lachlanshoesmith@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
