[tool.poetry]
name = "webdevcamp-backend"
version = "0.1.0"
description = "Backend API for webdevcamp"
authors = ["Lachlan Shoesmith <12870244+lachlanshoesmith@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^41.0.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg = {extras = ["binary"], version = "^3.1.14"}
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
