[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend API for webdevcamp"
authors = ["Lachlan Shoesmith <12870244+lachlanshoesmith@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^41.0.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
psycopg = {extras = ["binary", "pool"], version = "^3.1.15"}
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
httpx = "^0.26.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.3"
pytest-trio = "^0.8.0"
asgi-lifespan = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
